welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:43: error: not found: value N
	avanceNbPas(N:Int)
                    ^